service.yaml
kind: Service
apiVersion: v1
metadata:
  name: pilot-service
spec:
  selector:
    pod: pilot-pod
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8001
  type: ClusterIP
  type: NodePort
